@@ -7,7 +7,7 @@ Spring changelog
 
 Misc:
  - add map border rendering
- - allow lua ais to be selected with the menu
+ - allow Lua AI's to be selected from the menu
  ! new datadir structure: http://springrts.com/phpbb/viewtopic.php?f=12&t=30044
  ! removed "mods" from archive scandirs
  - do not switch camera-mode on countdown
@@ -32,6 +32,7 @@ Misc:
      length reached 0, so without disabling coldet (checkCol=false)
      range-exploits were possible
  - block impulses from applying to 'static' features
+ - remove impulse "capacitance" from ground units
  - LoadingMT: add a runtime check that should detect incompatibilities
  - disable ARB shaders with Intel/Mesa drivers (can be overridden by setting ForceEnableIntelShaderSupport=1)
  - apply UnitDef::myGravity to ground units (if non-zero)
@@ -41,7 +42,7 @@ Misc:
  ! LuaUnitDefs: deprecate canHover (check moveDef.family instead to determine if a unit is a hovercraft)
  - LuaRules: setup "proper" (transformation) state for the DrawProjectile callin
  - LuaRules: add AllowWeaponInterceptTarget(number interceptorUnitID, number interceptorWeaponID, number targetProjectileID) --> boolean
- - LuaUnitScript: optionally make Turn and Move insta-update piece matrices (pass "true" fifth argument)
+ - LuaUnitScript: optionally make Turn and Move insta-update piece matrices (pass "true" as the fifth argument)
  ! LuaSynced*: make sure ALL weapon API functions are 1-based
      UPDATE YOUR GAME'S UNIT_SCRIPT.LUA IF IT HAS LUA-SCRIPTED
      UNITS AND YOU ARE NOT USING SPRING'S (BASECONTENT) VERSION
